protobuf/protoeditor-core/testData/lang/annotation/ImportOptionReferenceErrors.proto.testdata
edition = "2024";

package foo.bar;

import option "<error descr="Cannot resolve import 'missing_file.proto'" type="WRONG_REF">missing_file.proto</error>";
